add loki-promtail services

--- a/docker/.env
+++ b/docker/.env
@@ -11,7 +11,7 @@ COAP_TRANSPORT_DOCKER_NAME=tb-coap-transport
 LWM2M_TRANSPORT_DOCKER_NAME=tb-lwm2m-transport
 SNMP_TRANSPORT_DOCKER_NAME=tb-snmp-transport
 
-TB_VERSION=latest
+TB_VERSION=3.3.2
 
 # Database used by ThingsBoard, can be either postgres (PostgreSQL) or hybrid (PostgreSQL for entities database and Cassandra for timeseries database).
 # According to the database type corresponding docker service will be deployed (see docker-compose.postgres.yml, docker-compose.hybrid.yml for details).
@@ -21,4 +21,6 @@ DATABASE=postgres
 LOAD_BALANCER_NAME=haproxy-certbot
 
 # If enabled Prometheus and Grafana containers are deployed along with other containers
-MONITORING_ENABLED=false
+MONITORING_ENABLED=true
+
+CONTAINER_LOGGING_ENABLED=true
