--- a/docker/monitoring/prometheus/prometheus.yml
+++ b/docker/monitoring/prometheus/prometheus.yml
@@ -36,6 +36,23 @@ scrape_configs:
     static_configs:
      - targets: ['localhost:9090']
 
+  - job_name: 'node-exporter'
+    scrape_interval: 5s
+    static_configs:
+     - targets: ['node-exporter:9100']
+
+  - job_name: 'kafka-exporter'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+    static_configs:
+     - targets: ['docker_kafka-exporter_1:9308']
+
+  - job_name: 'cadvisor'
+    # Override the global default and scrape targets from this job every 5 seconds.
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['cadvisor:8080']
+
   - job_name: 'tb-core1'
     metrics_path: /actuator/prometheus
     static_configs:
