--- a/docker/.env
+++ b/docker/.env
@@ -22,5 +22,5 @@ LOAD_BALANCER_NAME=haproxy-certbot
 
 # If enabled Prometheus and Grafana containers are deployed along with other containers
 MONITORING_ENABLED=true
-
+# If enabled Promtail and Loki containers are deployed along with other containers. Be careful: requires on MONITORING_ENABLED=true
 CONTAINER_LOGGING_ENABLED=true
