--- a/docker/docker-compose.prometheus-grafana.yml
+++ b/docker/docker-compose.prometheus-grafana.yml
@@ -66,6 +66,10 @@ services:
     restart: always
     deploy:
       mode: global
+    logging:
+      driver: json-file
+      options:
+        tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
   node-exporter:
     image: prom/node-exporter
     volumes:
@@ -82,6 +86,10 @@ services:
     restart: always
     deploy:
       mode: global
+    logging:
+      driver: json-file
+      options:
+        tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
   kafka-exporter:
     image: danielqsj/kafka-exporter
     command: ["--kafka.server=kafka:9092"]
@@ -90,3 +98,7 @@ services:
     restart: always
     deploy:
       mode: global
+    logging:
+      driver: json-file
+      options:
+        tag: "{{.ImageName}}|{{.Name}}|{{.ImageFullID}}|{{.FullID}}"
