add kafka cluster

--- a/docker/.env
+++ b/docker/.env
@@ -21,6 +21,6 @@ DATABASE=postgres
 LOAD_BALANCER_NAME=haproxy-certbot
 
 # If enabled Prometheus and Grafana containers are deployed along with other containers
-MONITORING_ENABLED=true
+#MONITORING_ENABLED=true
 # If enabled Promtail and Loki containers are deployed along with other containers. Be careful: requires on MONITORING_ENABLED=true
-CONTAINER_LOGGING_ENABLED=true
+#CONTAINER_LOGGING_ENABLED=true
