--- a/docker/queue-kafka.env
+++ b/docker/queue-kafka.env
@@ -1,2 +1,4 @@
 TB_QUEUE_TYPE=kafka
-TB_KAFKA_SERVERS=kafka:9092
+TB_KAFKA_SERVERS="kafka1:9092, kafka2:9092, kafka3:9092"
+TB_KAFKA_ACKS=1
+TB_QUEUE_KAFKA_REPLICATION_FACTOR=2
